完成了expert的list页面

--- a/src/main/webapps/WEB-INF/resources/css/backend/expert-form.css
+++ b/src/main/webapps/WEB-INF/resources/css/backend/expert-form.css
@@ -78,7 +78,7 @@
 	margin-top: 27px;
 }
 
-.new-user .textarea span.charactersleft {
+.new-user  span.charactersleft {
 	display: block;
 	color: #9ba0a5;
 	text-align: left;
