--- a/src/main/webapps/WEB-INF/resources/css/index/index.css
+++ b/src/main/webapps/WEB-INF/resources/css/index/index.css
@@ -16,6 +16,7 @@ ol, ul, menu {
 
 a{
 	text-decoration: none !important;
+	cursor:pointer;
 }
 
 #footer .f-nav, #topbar .nav-menu, .filling-box, .filling-box .tab-search-box .search-menu,
@@ -667,7 +668,8 @@ footer {
 	margin-right: 2px;
 	background: #f2f4f8;
 	color: #828282;
-	text-align: center
+	text-align: center;
+	cursor:pointer;
 }
 
 .filling-box .tab-search-box .search-menu li a.cur {
