--- a/src/main/webapps/WEB-INF/resources/css/common/common.css
+++ b/src/main/webapps/WEB-INF/resources/css/common/common.css
@@ -1,45 +1,304 @@
 @CHARSET "UTF-8";
-/* start navigation */
-.navbar-default {
-	background: #fff;
-	border: none;
-	box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.08);
-	margin: 0 !important;
+
+ol, ul {
+	list-style: none;
 }
 
-.navbar-default .navbar-brand {
-	color: #28a7e9;
-	font-size: 30px;
-	font-weight: bold;
-	height: 70px;
-	line-height: 35px;
+ul {
+	padding: 0;
 }
 
-.navbar-default .nav li a {
-	color: #666;
-	font-size: 13px;
-	font-weight: bold;
-	height: 70px;
-	line-height: 40px;
+a, a:hover {
+	text-decoration: none;
 }
 
-.navbar-default .nav li a:hover, .navbar-default .nav li a:focus,
-	.navbar-default .nav li a.current {
-	color: #28a7e9;
+li {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font: inherit;
+	font-size: 100%;
+	vertical-align: baseline;
 }
 
-.navbar-default .navbar-toggle {
-	border: none;
-	padding-top: 20px;
+ul {
+	margin: 0;
+	padding: 0;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-	background: #28a7e9;
+header {
+	margin-bottom: 20px;
+	z-index: 200;
+	-webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+	-moz-box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+		position: fixed;
+	width: 100%;
+}
+
+header .wrap {
+	width: 980px;
+	margin: 0 auto;
+	font-size: 12px;
+}
+
+header .container, header .wrap {
+	margin-right: auto;
+	margin-left: auto
+}
+
+header .container:after, header .container:before, header .wrap:after,
+	header .wrap:before {
+	display: table;
+	line-height: 0;
+	content: ""
+}
+
+header .container:after, header .wrap:after {
+	clear: both
+}
+
+{
+margin-bottom
+
+
+:
+
+
+20
+px
+;
+
+
+  
+
+position
+
+
+:relative
+
+
+;
+z-index
+
+
+:
+
+
+200;
+-webkit-box-shadow
+
+
+:
+
+
+0
+2
+px
+
+ 
+
+5
+px
+
+ 
+
+rgba
+
+
+(0
+,
+0,0,
+.2
+
+
+);
+-moz-box-shadow
+
+
+:
+
+
+0
+2
+px
+
+
+5
+px
+
+
+rgba
+(
+
+
+0
+,
+0
+,
+0
+,
+.2
+
+
+);
+box-shadow
+
+
+:
+
+
+0
+2
+px
+
+
+5
+px
+
+
+rgba
+(
+
+
+0
+,
+0
+,
+0
+,
+.2
+
+
+)
+}
+.header {
+	background-color: #303a40;
+	position: relative;
+	z-index: 100
+}
+
+.header .logo {
+	float: left;
+	padding: 5px 20px 5px 0;
+	position: relative
+}
+
+.header .logo img {
+	vertical-align: middle;
+	width: 110px;
+	height: 40px
+}
+
+.header .logo em {
+	visibility: hidden;
+	position: absolute;
+	cursor: pointer;
+	background-color: #838b8f;
+	padding: 0 4px 2px;
+	right: 16px;
+	top: 5px;
+	-webkit-border-radius: 3px 3px 3px 0;
+	-moz-border-radius: 3px 3px 3px 0;
+	border-radius: 3px 3px 3px 0
+}
+
+.header .logo a {
+	padding-right: 30px
+}
+
+.header .logo a:hover em {
+	visibility: visible
+}
+
+.header .logo em:after {
+	content: '';
+	position: absolute;
+	left: -4px;
+	bottom: 0;
+	border-style: solid;
+	border-width: 2px;
 	border-color: transparent;
+	border-right-color: #838b8f;
+	border-bottom-color: #838b8f
 }
 
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-	{
-	background-color: transparent
+.header .logo em i {
+	vertical-align: middle;
+	margin: 0
 }
-/* end navigation */
+
+.header .brand-logo {
+	width: 110px;
+	height: 40px;
+}
+
+.header .quick-menu {
+	text-align: right;
+	height: 50px;
+	line-height: 50px;
+	margin-left: 675px
+}
+
+.header .quick-menu .quick-menu-unlogined a {
+	margin: 0 5px;
+	color: #fff;
+	cursor: pointer;
+	text-decoration: none
+}
+
+.header nav {
+	float: left;
+	line-height: 50px
+}
+
+.header nav:after, .header nav:before {
+	display: table;
+	line-height: 0;
+	content: ""
+}
+
+.header nav:after {
+	clear: both
+}
+
+.header nav ul {
+	float: left
+}
+
+.header nav ul li {
+	float: left
+}
+
+.header nav ul li a {
+	display: block;
+	color: #ccc;
+	padding: 0 20px;
+	text-decoration: none;
+	font-size: 14px
+}
+
+.header nav ul li a:hover {
+	color: #fff;
+	background-color: #425a66
+}
+
+.header nav ul li.active a {
+	color: #fff;
+	font-weight: 700;
+	background-color: #3689b3
+}
+
+.expend-login {
+	float: right
+}
+
+.expend-login a {
+	margin-left: 20px;
+	color: #fff;
+	line-height: 38px
+}
+
+.clear {
+	clear: both
+}
