--- a/src/main/webapps/WEB-INF/resources/css/search/search.css
+++ b/src/main/webapps/WEB-INF/resources/css/search/search.css
@@ -8,6 +8,7 @@
 	margin: 0 auto;
 	width: 1000px;
 	padding-top: 70px;
+	min-height:600px;
 }
 
 #main .total {
@@ -15,6 +16,10 @@
 	margin: 15px 0 5px 15px;
 }
 
+#main .total strong{
+	color: #ff7f00;
+	margin:2px;
+}
 #main .filter {
 	float: left;
 	margin: 0 40px 0 15px;
@@ -110,11 +115,9 @@
 	float: left;
 }
 
-#main .search-input {
-	
-}
 
 /* result */
+
 #main .result {
 	width: 770px;
 }
@@ -163,6 +166,9 @@
 }
 
 /* search input */
+#main .search-input{
+	margin:20px 0;
+}
 #main .search-input fieldset {
 	margin-bottom: 0;
 	border: 2px solid #3d9ccc;
@@ -229,7 +235,8 @@
 	color: #fff;
 	font-size: 16px;
 	font-family: "microsoft yahei";
-	border-radius: 0; float : right;
+	border-radius: 0;
+	float: right;
 	line-height: 32px;
 	float: right;
 }
@@ -264,17 +271,41 @@
 	border: 1px solid #e6e6e6;
 	border-width: 0 0 0 1px;
 	outline: 0 none;
+	height: 34px;
 }
 
 .selectui .selectui-head .selectui-drop {
-position: absolute;
-cursor: pointer;
-right: 0;
-width: 26px;
-top: 0;
-background: url('/robot/resources/img/common/dropdown-gray.png');
+	position: absolute;
+	cursor: pointer;
+	right: 0;
+	width: 26px;
+	top: 0;
+	background: url('/robot/resources/img/common/dropdown-gray.png')center center no-repeat ;
+		no-repeat;
+	background-position-y: 9px;
 }
-
+.selectui:hover .selectui-drop {
+right: -1px;
+border-right: 1px solid #cdcdcd;
+background: url('/robot/resources/img/common/dropdown.png')center center no-repeat #ededed;
+}
+.selectui ul{
+	width: 82px ;
+min-width: 80px;
+right: auto;
+border-radius: 0;
+border: 1px solid #cdcdcd;
+box-shadow: none;
+margin: 0;
+padding:0;
+}
+.selectui ul li a:hover{
+	background-color:#D5E9F2;
+}
+.selectui ul li.current a{
+	background-color: #3D9CCC;
+	color: #fff;
+}
 .input-large {
 	height: 34px;
 	padding: 4px 6px;
