--- a/src/main/webapps/WEB-INF/resources/css/common/common.css
+++ b/src/main/webapps/WEB-INF/resources/css/common/common.css
@@ -12,6 +12,10 @@ a, a:hover {
 	text-decoration: none;
 }
 
+h1, h2, h3, h4, h5 {
+	margin: 0;
+}
+
 li {
 	margin: 0;
 	padding: 0;
@@ -25,6 +29,7 @@ ul {
 	margin: 0;
 	padding: 0;
 }
+
 
 header {
 	margin-bottom: 20px;
@@ -188,7 +193,6 @@ header .container:after, header .wrap:after {
 .clear {
 	clear: both
 }
-
 
 /* start footer */
 footer {
