添加聊天机器人

--- a/src/main/webapps/WEB-INF/resources/css/expert/expert.css
+++ b/src/main/webapps/WEB-INF/resources/css/expert/expert.css
@@ -221,7 +221,10 @@
 	border-top: 1px solid #e1e1e3;
 	width: 100%;
 }
-
+.paper-table  td{
+	overflow:hidden;
+	white-space:nowrap;
+}
 .paper-table tr {
 	font-size: 14px;
 	color: #000;
