--- a/src/main/webapps/WEB-INF/resources/css/search/search.css
+++ b/src/main/webapps/WEB-INF/resources/css/search/search.css
@@ -144,6 +144,7 @@
 #main .result .expert-info {
 	float: left;
 	padding: 0 10px 3px 20px;
+	width: 700px;
 }
 
 #main .result .expert-info .info-item {
