--- a/src/main/webapps/WEB-INF/resources/css/robot/robot.css
+++ b/src/main/webapps/WEB-INF/resources/css/robot/robot.css
@@ -453,6 +453,8 @@ footer {
 
 .choosing table td, .choosing table th {
 	text-indent: 30px;
+	white-space: nowrap;
+overflow: hidden;
 	border: 1px solid #e5e5e5;
 }
 
@@ -473,4 +475,22 @@ footer {
 	text-align: left;
 	text-indent: 20px;
 	border-left: 1px solid #efefef;
+}
+
+#searchLoading {
+	text-align: center;
+	padding: 20px;
+}
+
+.expertButton {
+	color: #000;
+}
+
+.expertButton.chosen {
+	color: #337ab7
+}
+
+.confirm-choose {
+	float: right;
+	margin-right: 20px;
 }
